objects/Discovery_Answer_Workbook_Category__c.object
<CustomObject>
    <description>Junction object between Discovery Answer and Discovery Site Workbook category</description>
    <fields>
        <fullName>Answer_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Same value of Discovery Answer Any_Answer field.</description>
        <label>Answer Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <referenceTo>Answer__c</referenceTo>
        <relationshipLabel>Discovery Answer Workbook Categories</relationshipLabel>
        <relationshipName>Discovery_Answer_Workbook_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Discovery_Workbook_Category__c</fullName>
        <label>Discovery Workbook Category</label>
        <referenceTo>Discovery_Workbook_Category__c</referenceTo>
        <relationshipLabel>Discovery Answer Workbook Categories</relationshipLabel>
        <relationshipName>Discovery_Answer_Workbook_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Discovery Answer Workbook Category</label>
    <nameField>
        <displayFormat>DAWC-{0000000}</displayFormat>
        <label>Discovery Answer Workbook Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Answer Workbook Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>